--- a/src/main/resources/static/myweb/css/styles.css
+++ b/src/main/resources/static/myweb/css/styles.css
@@ -10,6 +10,7 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+ @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500;700;900&display=swap');
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -56,7 +57,7 @@
   --bs-font-sans-serif: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
-  --bs-body-font-family: Merriweather, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  --bs-body-font-family: 'Noto Sans KR', sans-serif;
   --bs-body-font-size: 1rem;
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
@@ -69,17 +70,19 @@
 *::after {
   box-sizing: border-box;
 }
-
+.textBlack{
+	color:#000;
+}
 @media (prefers-reduced-motion: no-preference) {
   :root {
     scroll-behavior: smooth;
   }
 }
 
-* { font-family: 'Single Day', cursive; }
+* {font-family: 'Noto Sans KR', sans-serif; }
 
 h1, h2, h3, h4, h5, h6, p {
-  font-family: 'Single Day', cursive;
+  font-family: 'Noto Sans KR', sans-serif;
 } 
 
 body {
@@ -110,7 +113,7 @@ hr:not([size]) {
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-family: font-family: 'Single Day', cursive;
+  font-family: 'Noto Sans KR', sans-serif;
   font-weight: 500;
   line-height: 1.2;
 }
@@ -324,7 +327,7 @@ th {
   text-align: inherit;
   text-align: -webkit-match-parent;
 }
-
+div{padding:0;}
 thead,
 tbody,
 tfoot,
@@ -3000,7 +3003,7 @@ textarea.form-control-lg {
 
 .btn {
   display: inline-block;
-  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: 'Noto Sans KR', sans-serif;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
@@ -5769,7 +5772,7 @@ textarea.form-control-lg {
   z-index: 1080;
   display: block;
   margin: 0;
-  font-family: "Merriweather", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: 'Noto Sans KR', sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -5871,7 +5874,7 @@ textarea.form-control-lg {
   z-index: 1070;
   display: block;
   max-width: 276px;
-  font-family: "Merriweather", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: 'Noto Sans KR', sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -6412,6 +6415,12 @@ textarea.form-control-lg {
     opacity: 0.2;
   }
 }
+.image-thumbnail {
+    width:100%;
+    height:100%;
+    object-fit:cover;
+}
+
 .placeholder-wave {
   -webkit-mask-image: linear-gradient(130deg, #000 55%, rgba(0, 0, 0, 0.8) 75%, #000 95%);
           mask-image: linear-gradient(130deg, #000 55%, rgba(0, 0, 0, 0.8) 75%, #000 95%);
@@ -6495,7 +6504,13 @@ textarea.form-control-lg {
 .link-dark:hover, .link-dark:focus {
   color: #1a1e21;
 }
-
+.fullsize{
+	width: 100%;
+	height: 100%;
+}
+.nopadding{
+	padding: 0;
+}
 .ratio {
   position: relative;
   width: 100%;
@@ -11316,7 +11331,7 @@ body {
   padding: 1.25rem 2.25rem;
   font-size: 0.85rem;
   font-weight: 700;
-  font-family: 'Single Day', cursive;;
+  font-family: 'Noto Sans KR', sans-serif;
   text-transform: uppercase;
   border: none;
   border-radius: 10rem;
@@ -11337,17 +11352,17 @@ hr.divider-light {
 #mainNav {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   background-color: #fff;
-  font-family: font-family: 'Single Day', cursive;
+  font-family: 'Noto Sans KR', sans-serif;
   transition: background-color 0.2s ease;
 }
 #mainNav .navbar-brand {
-  font-family: font-family: 'Single Day', cursive;
+  font-family: 'Noto Sans KR', sans-serif;
   font-weight: 700;
   color: #212529;
 }
 #mainNav .navbar-nav .nav-item .nav-link {
   color: #6c757d;
-  font-family: font-family: 'Single Day', cursive;
+  font-family: 'Noto Sans KR', sans-serif;
   font-weight: 700;
   font-size: 20px;
   padding: 0.75rem 0;
@@ -11453,7 +11468,7 @@ header.masthead h1, header.masthead .h1 {
   text-align: center;
 }
 #portfolio .container-fluid .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-sm .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-md .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-lg .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-xl .portfolio-box .portfolio-box-caption .project-category, #portfolio .container-xxl .portfolio-box .portfolio-box-caption .project-category {
-  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: 'Noto Sans KR', sans-serif;
   font-size: 0.85rem;
   font-weight: 600;
   text-transform: uppercase;
