--- a/src/main/resources/static/myweb/css/styles.css
+++ b/src/main/resources/static/myweb/css/styles.css
@@ -5534,6 +5534,21 @@ textarea.form-control-lg {
   min-height: calc(100% - 1rem);
 }
 
+#modal-content-socket {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  pointer-events: auto;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.3rem;
+  outline: 0;
+}
+
+
+
 .modal-content {
   position: relative;
   display: flex;
